# anomalyhunter

./: .env.default  .gitignore  Makefile  README.md  data  pyproject.toml  setup.cfg
notebooks/: clean.ipynb  find.ipynb  mz.ipynb  one.ipynb  sub_string.py  опыты.ipynb
service/: __main__.py  app.py  config.py  schemas.py
service/data/export/: .~lock.anomaly_Амортизационная группа_ОС1c 100.xlsx#
service/data/import/: .~lock.ОС 2.xlsx#  ОС 2.xlsx  ОС.xlsx  список приложений для записи.xlsx
service/data/utility/: ОС.yaml  ОС1c 100.yaml  ОС1c1000.yaml
service/data/weights/: ОС 2.xlsx  ОС.xlsx
service/forms/: upload.py
service/hunter/: anomaly.py  handler.py  weights.py
service/repos/: files.py  index.py
service/static/: print.css
service/templates/: base.html  file_card.html  file_sheet.html  file_sheets.html  files.html  index.html  mistake.html  navbar.html
service/views/: files.py  index.py
